# CNN

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  main2.cpp
src/lib/: InputLayer.h  NN.cpp  NN.h  NeuralNetwork.cpp  NeuralNetwork.h  inpuLayer.cpp
src/lib/layer/: Layer.cpp  Layer.h  Layer.hpp
src/lib/optimizer/: Optimizer.cpp  Optimizer.h
src/lib/output/: Ouput.cpp  Ouput.h
src/lib/utils/: Config.cpp  Config.h  Config.hpp  Rng.cpp  Rng.hpp
